plugins/odss/OdssStoqsTrackFetcher: Clean URL construction future deprecation.